--- a/College5/College5Oefenen/College5Exercise3/opdracht3.html
+++ b/College5/College5Oefenen/College5Exercise3/opdracht3.html
@@ -6,7 +6,7 @@
   <meta name="viewport">
   <title>College</title>
   
-  <script  src="app.js"></script>
+  <script  src="opdracht3.js"></script>
 
 </head>
 
@@ -14,5 +14,3 @@
  
 
 </body>
-
-</html>
