--- a/College3/Opdrachten/Opdracht2/index.html
+++ b/College3/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 2. Ik wil graag in de volgende string ‘Programming is not so cool’ het woordje ‘not’ verwijderen. Schrijf een programma dat dit doet.
 </body>
 
 </html>
