--- a/College3/Opdrachten/Opdracht3/index.html
+++ b/College3/Opdrachten/Opdracht3/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 3. Vergelijk de waarden ‘1400’ met de string ‘Ik woon in Naboo’. Programmeer deze opdracht en geef aan (met commentaar in je code) waarom dit niet een slimme vraag is. 
 </body>
 
 </html>
