--- a/College4/Opdrachten/Opdracht2/index.html
+++ b/College4/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 2. Maak opdracht 1 nu met behulp van het switch statement.
 </body>
 
 </html>
