--- a/College4/Opdrachten/Opdracht3/index.html
+++ b/College4/Opdrachten/Opdracht3/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 3. Gegeven is de bovenstaande codesnippet. Maak een if-else statement die de waarden van de variabelen checkt. Als de 2 boolean variabelen ‘waar’ zijn en de job is ‘teacher’ dan moet in de console het volgende bericht worden getoond: ‘finally i can enjoy my book!’.  Voor alle andere mogelijkheden in de if-else structuur moet je ook een nette oplossing bedenken.
 </body>
 
 </html>
