--- a/College5/Opdrachten/Opdracht1/index.html
+++ b/College5/Opdrachten/Opdracht1/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 1.   Maak een while loop die kijkt of een in een reeks getallen deelbaar zijn door 4.
 </body>
 
 </html>
