--- a/College5/Opdrachten/Opdracht2/index.html
+++ b/College5/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,11 @@
 
 <body>
     <script src="script.js"></script>
+    // Een Fibonacci getallenreeks is bijvoorbeeld: 
+    // 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, …
+    // Je ziet hier duidelijk dat elk getal de som is van de 2 voorafgaande getallen.
+    // 2. Schrijf een berekening van een Fibonacci reeks met while loop. Gebruik maximaal 10 getallen. Console.log ook de gehele getallenreeks. Tip: denk het eerst eens uit op papier. Heb je moeite met deze vraag. Probeer dan eerst de udacity course te volgen.
+
 </body>
 
 </html>
