--- a/College6/Opdrachten/Opdracht1/index.html
+++ b/College6/Opdrachten/Opdracht1/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 1. Zet de uitwerking van de Fibonacci getallenreeks uit de vorige les om in een functie.
 </body>
 
 </html>
