--- a/College6/Opdrachten/Opdracht2/index.html
+++ b/College6/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <script src="script.js"></script>
+    // 2. Schrijf een functie countdown die van 10 - 1 aftelt (dit wordt ook in de console getoond). Geef aan de functie een jaartal parameter mee die als hij bij ‘0’ is zegt ‘Happy {jaartal}’.
+
 </body>
 
 </html>
