--- a/College6/Opdrachten/Opdracht3/index.html
+++ b/College6/Opdrachten/Opdracht3/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 3. Schrijf een functie expressie en declaratie waarmee je aantoont dat een expressie en een declaratie op een andere manier met hoisting omgaan. (als je deze vraag niet snapt dan moet je de videoreeks uit udacity kijken. Daar wordt hoisting goed uitgelegd).
 </body>
 
 </html>
