--- a/College7/Opdrachten/Opdracht2/index.html
+++ b/College7/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <script src="script.js"></script>
+    // 2. Gegeven is de volgende 2-dimensionale array van al mijn platen:
+// const allMyRecords = [
+//    ["The Who - Pinball Wizard", "Rolling Stones - Exile on main street", "Police - Message in a bottle"],
+//    ["De Dijk - Alle 40 Goed", "Het Goede Doel - Belgie", "Doe Maar - skunk"]
+// ];
+// Console.log alle waarden uit deze 2-dimensionale array. Tip: gebruik een dubbele loop.
+
 </body>
 
 </html>
