--- a/College8/Opdrachten/Opdracht1/index.html
+++ b/College8/Opdrachten/Opdracht1/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <script src="script.js"></script>
+    // 1.Schrijf de volgende array om in JSON. De array beschrijft rondetijden van een hardloper. Wat zijn de namen (keys) van de properties?
+
 </body>
 
 </html>
