--- a/College8/Opdrachten/Opdracht2/index.html
+++ b/College8/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <script src="script.js"></script>
+    // 2. Gegeven is een array met drie objecten:
+// Gebruik een for-loop of foreach-loop en print voor elk object de regel: “I have a [profession] named [name] and he likes to work on a [brand] computer”. De vierkante haken zijn placeholders voor de bijbehorende properties uit de objecten hierboven.
+
 </body>
 
 </html>
