--- a/College8/Opdrachten/Opdracht3/index.html
+++ b/College8/Opdrachten/Opdracht3/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <script src="script.js"></script>
+    // 3. [Pittig]. Gegeven is de array met objecten uit de vorige vraag. Voeg twee properties “hoursPerWeek” en “salary” toe. 
+// Verzin zelf bijpassende waardes. Voeg nu een methode “salaryPerHour” toe, met daarin een functie die print 
+// hoeveel de docenten per uur verdienen.
 </body>
 
 </html>
