--- a/College9/Opdrachten/Opdracht1/index.html
+++ b/College9/Opdrachten/Opdracht1/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body id="body">
+        // 1. Bereken met JavaScript het gemiddelde op basis van de cijfers die in de tabel staan en plaats dit gemiddelde cijfer weer op een nieuwe tabelregel in de tabel (ook weer met JavaScript).
+
     <table id="courses">
         <tr id="course1">
             <td>Computerscience basics</td>
