--- a/College9/Opdrachten/Opdracht2/index.html
+++ b/College9/Opdrachten/Opdracht2/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body id="body">
+        // 2. Zorg ervoor dat alle even elementen een andere achtergrondkleur krijgen. Gebruik hiervoor JS en maak zoveel mogelijke gebruik van functies.
+        // i will be useing the same table as in assignment 1.
+        
     <table id="courses">
         <tr id="course1">
             <td>Computerscience basics</td>
