--- a/College9/Opdrachten/Opdracht3/index.html
+++ b/College9/Opdrachten/Opdracht3/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body id="body">
+        // 3. Maak een functie een functie createImageElement(‘imageSrcName’) die een plaatje in JS maakt(img tag genereert met bijbehorende attributen) en deze vervolgens in het DOM zet.
     <table id="courses">
         <tr id="course1">
             <td>Computerscience basics</td>
