--- a/College3/Opdrachten/Opdracht1/index.html
+++ b/College3/Opdrachten/Opdracht1/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="script.js"></script>
+    // 1. Schrijf een simpele statement die aangeeft of een getal even of oneven is.
 </body>
 
 </html>
